# dreco-engine-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
.github/workflows/: builds.yml  linux.yml  ubuntu_cmake.yml  ubuntu_cmake_build.yml  windows-build.yml  windows.yml  windows_build_cmake.yml  windows_cmake.yml
assets/mi-24d/: scene.gltf
cmake/: settings.cmake
engine/: CMakeLists.txt  README.md
engine/libs/math/: CMakeLists.txt
engine/libs/math/include/math/: casts.hxx  constants.hxx  euler.hxx  mat.hxx  mat4.hxx  quaternion.hxx  transform.hxx  vec2.hxx  vec3.hxx  vec4.hxx
engine/libs/math/src/: mat4.cxx
engine/modules/: CMakeLists.txt  README.md
engine/modules/core-minimal/: CMakeLists.txt
engine/modules/core-minimal/include/: dreco.hxx
engine/modules/core-minimal/include/log/: log.hxx
engine/modules/gltf/: CMakeLists.txt
engine/modules/gltf/include/gltf/: gltf.hxx  image.hxx  material.hxx  model.hxx  scene.hxx
engine/modules/gltf/src/: gltf.cxx
engine/modules/math/: CMakeLists.txt
engine/modules/math/include/math/: casts.hxx  euler.hxx  mat.hxx  mat4.hxx  quaternion.hxx  transform.hxx  vec2.hxx  vec3.hxx  vec4.hxx
engine/modules/math/src/: mat4.cxx
engine/modules/sdl/: CMakeLists.txt
engine/modules/sdl-common/: CMakeLists.txt
engine/modules/sdl-common/include/sdl/: events.h
engine/modules/sdl-common/src/: sdl.cxx
engine/modules/shader-compiler/: CMakeLists.txt
engine/modules/shader-compiler-tool/: CMakeLists.txt
engine/modules/shader-compiler-tool/src/: shader_compiler.cxx
engine/modules/shader-compiler/include/shader_compiler_tool/: shader_compiler.hxx
engine/modules/shader-compiler/src/: shader_compiler.cxx
engine/modules/threads/: CMakeLists.txt
engine/modules/threads/include/threads/: thread_task.hxx
engine/modules/threads/src/: thread_pool.cxx
engine/src/: README.md  dreco.hxx
engine/src/core/: engine.cxx  engine.hxx  platform.h  signal_handler.cxx  signal_handler.hxx
engine/src/core/async/: thread_pool.hxx  thread_task.cxx
engine/src/core/async/async_tasks/: async_load_gltf.hxx  async_load_image.hxx
engine/src/core/containers/: image_data.cxx  image_data.hxx
engine/src/core/containers/gltf/: gltf.cxx  gltf.hxx  image.hxx  material.hxx  mesh.hxx  node.hxx
engine/src/core/loaders/: gltf_loader.cxx  gltf_loader.hxx
engine/src/core/managers/: event_manager.cxx  event_manager.hxx  input_manager.cxx  input_manager.hxx
engine/src/core/misc/: exceptions.hxx  file.cxx  file.hxx  fps_counter.hxx  log.hxx
engine/src/core/threads/: thread_pool.cxx  thread_pool.hxx  thread_task.cxx  thread_task.hxx
engine/src/core/threads/async_tasks/: async_load_gltf.hxx  async_load_image.hxx
engine/src/core/utils/: file_utils.hxx  fps_counter.hxx  log.hxx
engine/src/game_framework/: camera.cxx  camera.hxx  flying_camera.cxx  flying_camera.hxx  game_instance.cxx  game_instance.hxx  gltf_model.cxx  gltf_model.hxx  node.cxx  node.hxx  world.cxx  world.hxx
engine/src/game_objects/: camera.cxx  camera.hxx  debug_camera.cxx  debug_camera.hxx  flying_camera.cxx  flying_camera.hxx  game_instance.cxx  game_instance.hxx  gltf_model.cxx  gltf_model.hxx  node.cxx  node.hxx  node_base.cxx  node_base.hxx  root_node.cxx  root_node.hxx  world.cxx  world.hxx
engine/src/math/: casts.hxx  euler.hxx  mat4.cxx  mat4.hxx  math.hxx  quaternion.hxx  rotator.cxx  rotator.hxx  transform.cxx  transform.hxx  vec.hxx  vec2.hxx  vec3.hxx  vec4.hxx  vectors.hxx
engine/src/renderer/: render.hxx  vk_buffer.cxx  vk_buffer.hxx  vk_depth_image.cxx  vk_depth_image.hxx  vk_device_memory.hxx  vk_exceptions.hxx  vk_graphics_pipeline.cxx  vk_graphics_pipeline.hxx  vk_image.cxx  vk_image.hxx  vk_material.cxx  vk_material.hxx  vk_mesh.cxx  vk_mesh.hxx  vk_msaa_image.cxx  vk_msaa_image.hxx  vk_queue_family.cxx  vk_queue_family.hxx  vk_renderer.cxx  vk_renderer.hxx  vk_scene.cxx  vk_scene.hxx  vk_settings.cxx  vk_settings.hxx  vk_shader.cxx  vk_shader.hxx  vk_texture_image.cxx  vk_texture_image.hxx  vk_utils.cxx  vk_utils.hxx  vk_vertex.cxx  vk_vertex.hxx
engine/src/renderer/async_tasks/: async_load_texture_task.hxx
engine/src/renderer/containers/: camera_data.hxx  material_data.cxx  material_data.hxx
engine/src/renderer/images/: vk_depth_image.cxx  vk_depth_image.hxx  vk_msaa_image.cxx  vk_msaa_image.hxx  vk_texture_image.cxx  vk_texture_image.hxx
engine/src/renderer/shader_types/: camera_data.hxx  material_data.cxx  material_data.hxx
engine/src/renderer/shaders/: basic.cxx
engine/src/renderer/vulkan/: buffer.cxx  buffer.hxx  constants.hxx  device_memory.cxx  device_memory.hxx  exceptions.hxx  graphics_pipeline.cxx  graphics_pipeline.hxx  image.cxx  image.hxx  material.cxx  material.hxx  material_instance.cxx  material_instance.hxx  mesh.cxx  mesh.hxx  renderer.cxx  renderer.hxx  scene.cxx  scene.hxx  settings.cxx  settings.hxx  shader.cxx  shader.hxx  skybox.cxx  skybox.hxx  utils.cxx  utils.hxx  view.cxx  view.hxx
engine/src/renderer/vulkan/images/: cubemap_image.cxx  cubemap_image.hxx  depth_image.cxx  depth_image.hxx  msaa_image.cxx  msaa_image.hxx  texture_image.cxx  texture_image.hxx
engine/tools/: CMakeLists.txt
engine/tools/shader-compiler/: main.cxx
examples/triangle/: CMakeLists.txt  main.cxx
examples/window/: CMakeLists.txt  main.cxx
game/: CMakeLists.txt  README.md  game.cxx  game.hxx
game/assets/viking_room/: scene.gltf
game/shaders/src/: basic.frag  basic.vert  skybox.frag  skybox.vert
game/src/: game.cxx  game.hxx
launcher/: CMakeLists.txt  README.md  main.cxx
shaders/: basic.frag  basic.vert  basic.vert.spv  compile.bat  compile.sh  frag.spv  shader.vert  vert.spv
shaders/src/: basic.frag  basic.vert
src/: dreco.h  dreco.hxx
src/core/: platform.h  platform_paths.hxx
src/engine/: engine.cxx  engine.hxx  load_scene.hxx  signal_handler.cxx
src/math/: mat3x4.cxx  mat3x4.hxx  mat4.cxx  mat4.hxx  quaternion.hxx  rotator.cxx  rotator.hxx  transform.cxx  vec.hxx  (+6 more)
tools/: CMakeLists.txt  tools.cmake
tools/shader_list_generator/: CMakeLists.txt  main.cxx
(+124 files in other folders)
