cmake_minimum_required(VERSION 3.19.0)
project(dreco)

find_package(Vulkan REQUIRED)
find_package(SDL2 REQUIRED)

file(GLOB_RECURSE DRECO_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cxx)
file(GLOB_RECURSE DRECO_HEADER_FILES ${CMAKE_SOURCE_DIR}/src/*.hxx)

set(DRECO_BUILD_SHARED FALSE)

if (DRECO_BUILD_SHARED)
add_library(${PROJECT_NAME} SHARED ${DRECO_SOURCE_FILES} ${DRECO_HEADER_FILES})
target_compile_definitions(${PROJECT_NAME} PUBLIC DRECO_BUILD_SHARED)
else()
add_library(${PROJECT_NAME} STATIC ${DRECO_SOURCE_FILES} ${DRECO_HEADER_FILES})
target_compile_definitions(${PROJECT_NAME} PUBLIC DRECO_BUILD_STATIC)
endif()

target_link_libraries(${PROJECT_NAME} PUBLIC ${SDL2_LIBRARIES} ${Vulkan_LIBRARY} shader-compiler-static)
target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS})

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    EXPORT_COMPILE_COMMANDS TRUE
)

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/)

set(DRECO_ASSETS_DIR "assets")
set(DRECO_SHADERS_SOURCE_DIR "shaders/src")
set(DRECO_SHADERS_BINARY_DIR "shaders/bin")

target_compile_definitions(${PROJECT_NAME} PUBLIC 
-DDRECO_ASSETS_DIR="${DRECO_ASSETS_DIR}"
-DDRECO_SHADERS_SOURCE_DIR="${DRECO_SHADERS_SOURCE_DIR}"
-DDRECO_SHADERS_BINARY_DIR="${DRECO_SHADERS_BINARY_DIR}")

add_subdirectory(tools)
add_subdirectory(launcher)

set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/install")

install(DIRECTORY ${DRECO_ASSETS_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY ${DRECO_SHADERS_BINARY_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/shaders)
install(TARGETS dreco dreco-launcher
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}
        ARCHIVE EXCLUDE_FROM_ALL)
if (MSVC)
file(COPY ${SDL2_PREFIX}/bin/SDL2.dll DESTINATION ${PROJECT_BINARY_DIR})
install(FILES ${SDL2_PREFIX}/bin/SDL2.dll DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()
