cmake_minimum_required(VERSION 3.16.2)
project(dreco-game)

file(GLOB_RECURSE GAME_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cxx)
file(GLOB_RECURSE GAME_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hxx)

add_library(${PROJECT_NAME} STATIC ${GAME_SOURCE_FILES} ${GAME_HEADER_FILES})

target_link_libraries(${PROJECT_NAME} dreco-engine)

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    EXPORT_COMPILE_COMMANDS TRUE
)

install(DIRECTORY ${DRECO_ASSETS_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY ${DRECO_SHADERS_BINARY_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/shaders)