project(dreco-math)

file(GLOB_RECURSE DRECO_MATH_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hxx)
file(GLOB_RECURSE DRECO_MATH_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cxx)

add_library(${PROJECT_NAME} STATIC ${DRECO_MATH_SOURCE_FILES} ${DRECO_MATH_HEADER_FILES})

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    EXPORT_COMPILE_COMMANDS TRUE
)

target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/math")